changes in File

--- a/Create_CSV_files.ipynb
+++ b/Create_CSV_files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data\n"
+      "Resources\\Data\n"
      ]
     }
    ],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,21 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "OperationLog.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "i = 1\n",
     "for file in get_csv_files(files_path):  \n",
-    "    print (file)\n",
     "    file_path = os.path.join(files_path, file)\n",
     "    #print(file_path)\n",
     "    sample_data = pd.read_csv(file_path)\n",
@@ -75,8 +65,10 @@
     "    final_sort_df = final_df_grouped.sort_values(by='Message', ascending=False)\n",
     "    machine1_final_df = final_sort_df.drop(columns=['index', 'Parameter_from'])\n",
     "    machine1_final_df.head()\n",
-    "    machine1_final_df.to_csv(file.split('.')[0] + \"output\", encoding='utf-8')\n",
-    "    i += 1"
+    "    output_filename = file.split('.')[0] + \"output.csv\"\n",
+    "    output_path = os.path.join(files_path, \"Output\",  output_filename)\n",
+    "   # print(output_path)\n",
+    "    machine1_final_df.to_csv(output_path, encoding='utf-8')"
    ]
   },
   {
